--- a/styles/style.css
+++ b/styles/style.css
@@ -10,6 +10,7 @@ body {
     margin: 0;
     overflow: hidden; 
     background-color: var(--first-background-dark); 
+    font-family: Montserrat, system-ui;
 }
 
 body {
@@ -43,7 +44,6 @@ body {
 }
 
 .user-details {
-    font-family: Montserrat, system-ui;
     color: var(--text-color-dark);
     display: flex;
     flex-direction: column;
@@ -65,15 +65,16 @@ body {
     letter-spacing: 0%;
 }
 
-footer {
+.footer-buttons {
+    
     display: flex;
     position: relative;  
     justify-content: space-between;
     background-color: var(--second-background-dark);
     border-radius: 15px;
     padding: 10px 20px;
-    z-index: 100;     
-    margin: 20px;
+    z-index: 100;
+    
 }
 
 .footer-button {
@@ -117,4 +118,67 @@ main {
     z-index: 1; 
     background-color: bisque;
     border-radius: 15px;
+}
+
+footer{
+    margin: 20px;
+    display: block;
+}
+
+.filters-container {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    background-color: var(--second-background-dark);
+    border-radius: 15px 15px 0px 0px;
+    padding: 15px 20px;
+    /* width: 100%; */
+    max-height: 350px;
+    overflow: hidden;
+    transition: max-height 0.3s ease-in-out;
+    z-index: 101;
+    gap: 15px;
+    order: 4;
+}
+
+.filter-section{
+    display: flex;
+    justify-content: space-between;
+    gap: 10px;
+
+}
+
+.toggle-button{
+    display: flex;
+    flex-grow: 1;
+    border-radius: 10px;
+    border: var(--text-color-dark) 1px solid;
+    background-color: var(--second-background-dark);
+    color: var(--text-color-dark);
+    padding: 10px;    
+    align-items: center;
+    gap: 10px;
+    font-weight: 700;
+    font-size: 8px;
+    text-transform: uppercase;
+
+}
+.toggle-button.active{
+    background-color: var(--text-color-dark);
+    color: var(--second-background-dark);
+}
+
+.circle{
+    border: var(--text-color-dark) 1px solid;
+    border-radius: 100px;
+    width: 15px;
+    height: 15px;
+}
+
+.circle.active{
+    border: var(--second-background-dark) 1px solid;
+}
+
+.period-button{
+    
 }
