--- a/templates/index.html
+++ b/templates/index.html
@@ -28,18 +28,78 @@
   </main>
 
   <footer>
-    <div class="footer-button">
-        <img src="../assets/icons/wallet.svg" alt="Кошелек">
-        <span>Баланс</span>
-    </div>
-    <div class="footer-button filter-button">
-        <img src="../assets/icons/filter_big.svg" alt="Фильтр">
-        <span>Фильтры</span>
-    </div>
-    <div class="footer-button">
-        <img src="../assets/icons/user_circle.svg" alt="">
-        <span>Профиль</span>
-    </div>
+    <div class="filters-container">
+        <div class="filter-section">
+          <button class="toggle-button active"><span class="circle active"></span>Постоянная работа</button>
+          <button class="toggle-button"><span class="circle"></span>Временная работа</button>
+        </div>
+  
+        <div class="filter-section">
+          <button class="toggle-button">1 день</button>
+          <button class="toggle-button">До 1 недели</button>
+          <button class="toggle-button">До 1 месяца</button>
+          <button class="toggle-button">Более 1 месяца</button>
+        </div>
+        
+        <h4>Маркетплейсы</h4>
+  
+        <div class="filter-section marketplaces">
+            <div class="marketplace-logos">
+              <button type="button" data-filter="wildberries">
+                  <img src="../assets/icons/wb-logo.svg" alt="Wildberries">
+                  <span>Wildberries</span>
+              </button>
+              <button type="button" data-filter="yandex">
+                  <img src="../assets/icons/yandex-market-logo.svg" alt="Я.Маркет">
+                  <span>Я.Маркет</span>
+              </button>
+              <button type="button" data-filter="ozon">
+                  <img src="../assets/icons/ozon-logo.svg" alt="Ozon">
+                  <span>OZON</span>
+              </button> 
+              <button type="button" data-filter="avito">
+                  <img src="../assets/icons/avito-logo.svg" alt="Avito">
+                  <span>AVITO</span>
+              </button>
+               <button type="button" data-filter="boxberry">
+                  <img src="../assets/icons/boxberry-logo.svg" alt="Boxberry">
+                  <span>Boxberry</span>
+              </button>
+            </div>
+        </div>
+  
+        <div class="filter-section">
+          <select class="select-city">
+            <option value="">Выберите город</option>
+            <option value="moscow">Москва</option>
+            <option value="spb">Санкт-Петербург</option>
+          </select>
+        </div>
+  
+        <div class="filter-section">
+          <select class="select-position">
+            <option value="">Выберите должность</option>
+            <option value="courier">Курьер</option>
+            <option value="packer">Упаковщик</option>
+          </select>
+        </div>
+      </div>
+      <div class="footer-buttons">
+          <div class="footer-button">
+              <img src="../assets/icons/wallet.svg" alt="Кошелек">
+              <span>Баланс</span>
+          </div>
+          <div class="footer-button filter-button">
+              <img src="../assets/icons/filter_big.svg" alt="Фильтр">
+              <span>Фильтры</span>
+          </div>
+          <div class="footer-button">
+              <img src="../assets/icons/user_circle.svg" alt="">
+              <span>Профиль</span>
+          </div>
+      </div>
+
+   
   </footer>
 </body>
 </html>
