--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,5 @@
+@import "tailwindcss";
+
 :root {
     --first-background-dark: #2B2B2B;
     --second-background-dark: #242424;
@@ -11,6 +13,7 @@ body {
     overflow: hidden; 
     background-color: var(--first-background-dark); 
     font-family: Montserrat, system-ui;
+    color: var(--text-color-dark)
 }
 
 body {
@@ -44,7 +47,7 @@ body {
 }
 
 .user-details {
-    color: var(--text-color-dark);
+    /* color: var(--text-color-dark); */
     display: flex;
     flex-direction: column;
     gap: 2px;
@@ -85,7 +88,7 @@ body {
     font-weight: 700;
     font-size: 8px;
     text-transform: uppercase;
-    color: var(--text-color-dark);
+    /* color: var(--text-color-dark); */
     padding: 0px 10px;
     gap: 2px;
 }
@@ -154,7 +157,7 @@ footer{
     border-radius: 10px;
     border: var(--text-color-dark) 1px solid;
     background-color: var(--second-background-dark);
-    color: var(--text-color-dark);
+    /* color: var(--text-color-dark); */
     padding: 10px;    
     align-items: center;
     gap: 10px;
@@ -179,6 +182,36 @@ footer{
     border: var(--second-background-dark) 1px solid;
 }
 
-.period-button{
-    
+.separator{
+    display: block;
+    border: white 1px solid;
+    opacity: 10%;
+    /* margin: 10px; */
+    height: 1px;
+}
+
+/* .m-0{
+    font-family: Montserrat;
+    font-weight: 700;
+    font-size: 8px;
+    line-height: 100%;
+    letter-spacing: 0%;
+    text-transform: uppercase;
+} */
+
+.marketplace-logos{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    justify-content: space-between;
+    width: 100%;
+}
+
+.marketplace-button{
+    border-width: 0;
+    flex-grow: 1;
+}
+
+.marketplace-button.active{
+    border: var(--text-color-dark) 1px solid;
 }
