--- a/templates/index.html
+++ b/templates/index.html
@@ -70,21 +70,26 @@
             </div>
         </div>
   
+        <span class="separator"></span>
+
         <div class="filter-section">
-          <select class="select-city">
+          <select class="filter-select">
             <option value="">Выберите город</option>
             <option value="moscow">Москва</option>
             <option value="spb">Санкт-Петербург</option>
           </select>
         </div>
+
+        <span class="separator"></span>
   
         <div class="filter-section">
-          <select class="select-position">
+          <select class="filter-select">
             <option value="">Выберите должность</option>
-            <option value="courier">Курьер</option>
-            <option value="packer">Упаковщик</option>
+            <option value="courier">Оператор ПВЗ</option>
+            <option value="packer">Управляющий</option>
           </select>
         </div>
+        <span class="separator"></span>
       </div>
       <div class="footer-buttons">
           <div class="footer-button">
@@ -100,8 +105,6 @@
               <span>Профиль</span>
           </div>
       </div>
-
-   
   </footer>
 </body>
 </html>
