--- a/templates/index.html
+++ b/templates/index.html
@@ -5,9 +5,9 @@
   <title>Макет приложения</title>
   <link rel="stylesheet" href="../styles/style.css">  
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100..900&display=swap" rel="stylesheet">
-  <script async src="https://api-maps.yandex.ru/v3/?apikey=00b80c2a-8bf3-41fd-a5da-640243e7e720&lang=ru_RU"></script>
+  <script async src="https://api-maps.yandex.ru/v3/?apikey=0d17beb4-a2ec-4c18-8215-4d6648dff7a8&lang=ru_RU"></script>
   <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
-  <!-- <script src="../scripts/map.js"></script> -->
+  <script src="../scripts/map.js"></script>
 </head>
 <body>
   <header class="head">
@@ -37,7 +37,7 @@
         </div>
   
         <div class="filter-section">
-          <button class="toggle-button active px-10 py-5">1 день</button>
+          <button class="toggle-button active px-5 py-5">1 день</button>
           <button class="toggle-button px-10 py-5">До 1 недели</button>
           <button class="toggle-button px-10 py-5">До 1 месяца</button>
           <button class="toggle-button px-10 py-5">Более 1 месяца</button>
