--- a/styles/style.css
+++ b/styles/style.css
@@ -119,7 +119,7 @@ main {
     width: calc(100% - 20px); 
     height: calc(100% - 20px); 
     z-index: 1; 
-    background-color: bisque;
+    /* background-color: bisque; */
     border-radius: 15px;
 }
 
@@ -164,7 +164,9 @@ footer{
     font-weight: 700;
     font-size: 8px;
     text-transform: uppercase;
-
+    min-width: min-content;
+    text-align: center;
+    white-space: nowrap;
 }
 .toggle-button.active{
     background-color: var(--text-color-dark);
