--- a/templates/index.html
+++ b/templates/index.html
@@ -5,9 +5,10 @@
   <title>Макет приложения</title>
   <link rel="stylesheet" href="../styles/style.css">  
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100..900&display=swap" rel="stylesheet">
-  <script async src="https://api-maps.yandex.ru/v3/?apikey=0d17beb4-a2ec-4c18-8215-4d6648dff7a8&lang=ru_RU"></script>
+  <script src="https://api-maps.yandex.ru/v3/?apikey=0d17beb4-a2ec-4c18-8215-4d6648dff7a8&lang=ru_RU"></script>
   <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
   <script src="../scripts/map.js"></script>
+  <script src="../scripts/filters.js"></script>
 </head>
 <body>
   <header class="head">
@@ -17,8 +18,8 @@
     <div class="user-info">
       <img src="../assets/images/user-avatar.png" alt="Аватар пользователя">
       <div class="user-details">
-        <span class="name">Артём</span>
-        <span class="id">ID: 741342267</span>
+        <span class="name font-bold uppercase">Артём</span>
+        <span class="id font-normal">ID: 741342267</span>
       </div>
     </div>
   </header>
@@ -36,11 +37,11 @@
           <button class="toggle-button active"><span class="circle active"></span>Временная работа</button>
         </div>
   
-        <div class="filter-section">
-          <button class="toggle-button active px-5 py-5">1 день</button>
-          <button class="toggle-button px-10 py-5">До 1 недели</button>
-          <button class="toggle-button px-10 py-5">До 1 месяца</button>
-          <button class="toggle-button px-10 py-5">Более 1 месяца</button>
+        <div class="filter-section times">
+          <button class="toggle-button active">1 день</button>
+          <button class="toggle-button">До 1 недели</button>
+          <button class="toggle-button">До 1 месяца</button>
+          <button class="toggle-button">Более 1 месяца</button>
         </div>
         <span class="separator"></span>
         <h4 class="m-0 font-bold margin-0 opacity-50">Маркетплейсы</h4>
@@ -91,7 +92,7 @@
         </div>
         <span class="separator"></span>
       </div>
-      <div class="footer-buttons">
+      <div class="footer-buttons top-radius">
           <div class="footer-button">
               <img src="../assets/icons/wallet.svg" alt="Кошелек">
               <span>Баланс</span>
