--- a/styles/style.css
+++ b/styles/style.css
@@ -2,6 +2,7 @@
 @import url(./components/map.css);
 @import url(./components/footer.css);
 @import url(./components/header.css);
+@import url(./components/search.css);
 
 
 :root {
